# rust-music-app

./: .gitignore  README.md  index.html  index.js  mydb.db  package-lock.json  package.json
constants/: index.js
electron/db/: index.js  normalize.js
native/: Cargo.toml
native/src/: lib.rs
scripts/: start.sh
src/: .gitignore  babel.config.js  index.html  main.js  package-lock.json  package.json  webpack.config.js
src/src/: index.html  index.js
src/src/components/: App.js  Controls.js  Metadata.js  Songs.js
src/src/context/: index.js
src/src/styles/: index.less
