[package]
name = "neon-app"
version = "0.1.0"
authors = ["Philip Van Raalte <phil.vanraalte@gmail.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]
edition = "2018"

[lib]
name = "neon_app"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.2.0"

[dependencies]
neon = "0.2.0"
rodio = "0.8.1"
serde = "1"
serde_bytes = "0.10"
serde_derive = "1"
serde_json = "1"
neon-serde = "0.1"
